# vayu-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  turbo.json
.github/workflows/: cd.yml  ci.yml  keepalive.yml
apps/ai/: alembic.ini  pyproject.toml
apps/ai/app/: __init__.py  main.py
apps/ai/app/agents/: graph.py  registry.py  runner.py
apps/ai/app/api/v1/: agents.py  copilot.py  health.py  rag.py  router.py
apps/ai/app/core/: config.py  observability.py  prompts.py  ratelimit.py  security.py
apps/ai/app/db/: base.py  models.py
apps/ai/app/db/migrations/: env.py
apps/ai/app/db/migrations/versions/: 0001_init.py
apps/ai/app/rag/: chunking.py  parsing.py  pipeline.py  retrieval.py  vectorstore.py
apps/ai/app/services/: cache.py  embeddings.py  llm.py  redis.py  storage.py
apps/ai/tests/: test_agents.py  test_health.py  test_llm_orchestration.py  test_prompts.py  test_providers.py  test_rag.py  test_retrieval.py  test_storage.py  test_vectorstore.py
apps/web/: .env.example  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  proxy.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-form.tsx  copilot-panel.tsx  demo.tsx  floating-dock.tsx  theme-toggle.tsx
docs/: AUDIT.md  AWS_S3_SETUP.md  DEPLOYMENT.md  LOGIC.md  PROVIDERS.md
docs/architecture/: 01-overview.md  02-hld.md  03-data-model.md  04-api.md  05-folder-structure.md  README.md
docs/build-log/: README.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15-ui.md  phase-16-polish.md  phase-17-multi-llm.md  phase-18-hardening.md  phase-19-rag-hybrid.md  phase-20-chat.md  phase-21-vectorstore.md  phase-22-e2e.md  phase-23-deploy.md  phase-24-hardening.md  phase-25-providers-auth-storage.md  phase-26-web-experience.md
infra/docker/: Dockerfile.ai  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
(+65 files in other folders)
